<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label"/>

    <EditText
        android:id="@+id/incident_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_label"/>

    <Button
        android:id="@+id/dateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="12.12.2012 12:12"/>

    <CheckBox
        android:id="@+id/okayCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isOkay_label"/>

    <Button
        android:id="@+id/sendReportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendReport">

    </Button>

    </LinearLayout>
</ScrollView>